k8s/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intellinexus
  labels:
    app.kubernetes.io/name: intellinexus
    app.kubernetes.io/component: api-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: intellinexus
